[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures = { version = "0.3.23", features = ["futures-executor", "thread-pool"]}
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }
